src-tauri/compile_errors_v27.txt
cargo :     Checking 
qurancaption v3.3.0 (C:\Users
\techo\Desktop\QuranCaption\s
rc-tauri)
At line:1 char:1
+ cargo check 2>&1 | 
Out-File -Encoding utf8 
compile_errors_v27.txt
+ ~~~~~~~~~~~~~~~~
    + CategoryInfo           
   : NotSpeci    fied: (    
Checki    ng qu...tion\src-  
  tauri):String) []    , 
RemoteException
    + FullyQualifiedE    
rrorId : NativeCo    
mmandError
 
error: unknown start of 
token: `
    --> 
src\exporter.rs:1720:1
     |
1720 | ```
     | ^^^
     |
     = note: character 
appears 2 more times
help: Unicode character '`' 
(Grave Accent) looks like 
''' (Single Quote), but it 
is not
     |
1720 - ```
1720 + '''
     |

warning: unused import: 
`std::sync::Arc`
 --> src\renderer.rs:1:5
  |
1 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^
  |
  = note: 
`#[warn(unused_imports)]` 
(part of `#[warn(unused)]`) 
on by default

warning: unused import: 
`tokio::sync::Mutex as 
TokioMutex`
 --> src\renderer.rs:2:5
  |
2 | use tokio::sync::Mutex 
as TokioMutex;
  |     ^^^^^^^^^^^^^^^^^^^^^
^^^^^^^^^^^

warning: unused imports: 
`Resolution`, `Weight`, and 
`cosmic_text::Align`
 --> src\renderer.rs:6:73
  |
6 | ...FontSystem, Metrics, 
Resolution, Shaping, 
SwashCache, TextAtlas, 
TextArea, TextBounds, 
Weight, cosmic_text::Align};
  |                         
^^^^^^^^^^                   
                             
        ^^^^^^  
^^^^^^^^^^^^^^^^^^

warning: variable does not 
need to be mutable
    --> 
src\exporter.rs:1524:9
     |
1524 |     let mut child = 
cmd.spawn()
     |         ----^^^^^
     |         |
     |         help: remove 
this `mut`
     |
     = note: 
`#[warn(unused_mut)]` (part 
of `#[warn(unused)]`) on by 
default

error[E0507]: cannot move 
out of an `Arc`
    --> 
src\exporter.rs:1715:35
     |
1715 |     let encoder = Arc:
:try_unwrap(session.encoder).
map_err(|_| "Failed to 
unwrap encoder Arc. Session 
might still be in 
use.")?.into_inne...
     |                       
            ^^^^^^^^^^^^^^^ 
move occurs because value 
has type `std::sync::Arc<toki
o::sync::Mutex<VideoEncoder>>
`, which does not implement 
the `Copy` trait
     |
help: clone the value to 
increment its reference count
     |
1715 |     let encoder = Arc:
:try_unwrap(session.encoder.c
lone()).map_err(|_| "Failed 
to unwrap encoder Arc. 
Session might still be in 
use.")?.into_inner();
     |                       
                           
++++++++

warning: value assigned to 
`durations_s` is never read
   --> src\exporter.rs:623:27
    |
623 |     let mut 
durations_s = Vec::new();
    |                        
   ^^^^^^^^^^
    |
    = help: maybe it is 
overwritten before being 
read?
    = note: `#[warn(unused_as
signments)]` (part of 
`#[warn(unused)]`) on by 
default

warning: unused variable: 
`remain`
   --> src\exporter.rs:763:17
    |
763 |             let remain 
= duration_s - total_bg_s;
    |                 ^^^^^^ 
help: if this is 
intentional, prefix it with 
an underscore: `_remain`
    |
    = note: 
`#[warn(unused_variables)]` 
(part of `#[warn(unused)]`) 
on by default

warning: unused variable: 
`path_strs`
    --> 
src\exporter.rs:1248:9
     |
1248 |     let path_strs: 
Vec<String> = files
     |         ^^^^^^^^^ 
help: if this is 
intentional, prefix it with 
an underscore: `_path_strs`

warning: unused variable: 
`app_handle`
    --> 
src\exporter.rs:1298:9
     |
1298 |     let app_handle = 
app.clone();
     |         ^^^^^^^^^^ 
help: if this is 
intentional, prefix it with 
an underscore: `_app_handle`

warning: unused variable: 
`export_id_clone`
    --> 
src\exporter.rs:1299:9
     |
1299 |     let 
export_id_clone = 
export_id.clone();
     |         
^^^^^^^^^^^^^^^ help: if 
this is intentional, prefix 
it with an underscore: 
`_export_id_clone`

warning: unused variable: 
`imgs_folder`
    --> 
src\exporter.rs:1605:5
     |
1605 |     imgs_folder: 
String,
     |     ^^^^^^^^^^^ help: 
if this is intentional, 
prefix it with an 
underscore: `_imgs_folder`

warning: unused variable: 
`timestamps_ms`
    --> 
src\exporter.rs:1606:5
     |
1606 |     timestamps_ms: 
Vec<i32>,
     |     ^^^^^^^^^^^^^ 
help: if this is 
intentional, prefix it with 
an underscore: 
`_timestamps_ms`

warning: unused variable: 
`fade_duration_ms`
    --> 
src\exporter.rs:1609:5
     |
1609 |     fade_duration_ms: 
i32,
     |     ^^^^^^^^^^^^^^^^ 
help: if this is 
intentional, prefix it with 
an underscore: 
`_fade_duration_ms`

warning: unused variable: 
`chunk_index`
    --> 
src\exporter.rs:1615:5
     |
1615 |     chunk_index: 
Option<i32>,
     |     ^^^^^^^^^^^ help: 
if this is intentional, 
prefix it with an 
underscore: `_chunk_index`

warning: unused variable: 
`blur`
    --> 
src\exporter.rs:1616:5
     |
1616 |     blur: Option<f64>,
     |     ^^^^ help: if 
this is intentional, prefix 
it with an underscore: 
`_blur`

warning: unused variable: 
`is_high_fidelity`
    --> 
src\exporter.rs:1617:5
     |
1617 |     is_high_fidelity: 
bool,
     |     ^^^^^^^^^^^^^^^^ 
help: if this is 
intentional, prefix it with 
an underscore: 
`_is_high_fidelity`

warning: unused variable: 
`app_handle`
    --> 
src\exporter.rs:1618:5
     |
1618 |     app_handle: 
tauri::AppHandle,
     |     ^^^^^^^^^^ help: 
if this is intentional, 
prefix it with an 
underscore: `_app_handle`

For more information about 
this error, try `rustc 
--explain E0507`.
warning: `qurancaption` 
(lib) generated 16 warnings
error: could not compile 
`qurancaption` (lib) due to 
2 previous errors; 16 
warnings emitted
